Recent font changes made to the main html source

--- a/port2.html
+++ b/port2.html
@@ -1,2 +1,14 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>The Dark Woods Collection</title>
+</head>
+<body>
+<img src="port_images/prayer.jpg" width="300" alt="Kris praying">
+<img src="port_images/farface.jpg" width="300" alt="Kris looking">
+<img src="port_images/Tree.jpg" width="300" alt="A tree and spiderweb">
+<img src="port_images/closeface.jpg" width="300" alt="A closeup of Kris">
+
+<a href="port.html">Home page</a>
+</body>
+</html>
