--- a/port.html
+++ b/port.html
@@ -2,43 +2,93 @@
 <html>
 <head>
     <title>Trey Hopkins' Dark Collection</title>
-  <div class="main-body">
-        <header>
-          <h2> The Dark Collection by Trey Hopkins</h2>
+    <link rel="stylesheet" href="port.css">
+</head>
+
+  <section class="main-body">
+
+        <header class="main-header">
+          <h1> The Dark Collection</h1>
            <ul>
-             <li>Buy</li>
-             <li>Tickets</li>
-             <li>Galleries</li>
-             <li>Contact</li>
+             <li><a href="">Meet</a></li>
+             <li><a href="">About</a></li>
+             <li><a href="">Info</a></li>
+             <li><a href="">Contact</a></li>
            </ul>
         </header>
-      <p>This is combination of photo art galleries curated by Trey Hopkins. This
-        art work reflects different times in his life. These galleries may be little
-        in quantity but bring much needed life and quality.
-      </p>
 
-    </head>
-    <body>
+
+  <body>
+
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        It has survived not only five centuries, but also the leap into electronic typesetting,
+        </p>
+    
+
+
+
       <h3>The Black and White</h3>
 
         <p>This is a collection that was curated by Trey Andrew</p>
-
+<div class="clearfix">
+<div class="Woods">
         <h4>The Dark Woods</h4>
-        <img src="port_images/crossarm.jpg" width="300" alt="Kris with arms crossed">
-        <p>This brilliant collection boasts dramatic black and white shades
+        <img src="port_images/crossarm.jpg" width="300" alt="Kris with arms crossed" class="crossarm">
+      <p class="para_1">This brilliant collection boasts dramatic black and white shades
         whilst giving a sense of depression and despair. This Dark Woods gallery
       comes together in collaboration with The Messages and Palace Skateboards.
-    These photos feature Kristopher White as the main subject. <a href="xxx">Click here</a>
-    to view the entire gallery.</p>
-
-        <h4>Le Bridge</h4>
-        <img src="port_images/bridge.jpg" width="300" height="225" alt="bridge in KY">
-        <p></p>
-
-        <h4>The abandonded</h4>
-        <img src="port_images/sitting.jpg" width="300" height="400" alt="Todd on stairs">
-        <p></p>
-
+    These photos feature Kristopher White as the main subject. <a href="port2.html">Click here</a>
+    to view the entire gallery. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+    It has survived not only five centuries, but also the leap into electronic typesetting,
+    remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
+    sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
+    PageMaker including versions of Lorem Ipsum.</p>
+  </div>
+</div>
+  <div class="clearfix"
+    <div class="Bridge">
+          <h4>Le Bridge</h4>
+          <img src="port_images/bridge.jpg" width="300" height="225" alt="bridge in KY" class="pope">
+          <p class="para_2">This gallery is a small collection of dark photos taken upon the pope lick bridge
+          and surrounding areas. Like the Dark Woods gallery, this collection shows the use
+        of gloomy dark shades and dull whites to bring a sense of dramaticism.
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        It has survived not only five centuries, but also the leap into electronic typesetting,
+        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
+        sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
+        PageMaker including versions of Lorem Ipsum.</p>
     </div>
+  </div>
+
+    <div class="clearfix">
+      <div class="abandonded">
+            <h4>The abandonded</h4>
+            <img src="port_images/sitting.jpg" width="300" height="400" alt="Todd on stairs" class="Todd">
+            <p class="para_3">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi
+              ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+              when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+              It has survived not only five centuries, but also the leap into electronic typesetting,
+              remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
+              sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
+              PageMaker including versions of Lorem Ipsum.</p>
+            </div>
+      </div>
+</section>
  </body>
+ <footer>
+
+
+ </footer>
 </html>
