--- a/port.html
+++ b/port.html
@@ -3,29 +3,35 @@
 <head>
     <title>Trey Hopkins' Dark Collection</title>
     <link rel="stylesheet" href="port.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
 </head>
 
   <section class="main-body">
 
         <header class="main-header">
           <h1> The Dark Collection</h1>
+          <div class="table">
            <ul>
              <li><a href="">Meet</a></li>
-             <li><a href="">About</a></li>
+             <li><a href="about.html">About</a></li>
              <li><a href="">Info</a></li>
              <li><a href="">Contact</a></li>
            </ul>
+           </div>
+
         </header>
 
 
   <body>
 
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        <p class="opener">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
         when an unknown printer took a galley of type and scrambled it to make a type specimen book.
         It has survived not only five centuries, but also the leap into electronic typesetting,
         </p>
-    
+
 
 
 
@@ -35,23 +41,25 @@
 <div class="clearfix">
 <div class="Woods">
         <h4>The Dark Woods</h4>
+        <a href="port2.html">
         <img src="port_images/crossarm.jpg" width="300" alt="Kris with arms crossed" class="crossarm">
+      </a>
       <p class="para_1">This brilliant collection boasts dramatic black and white shades
         whilst giving a sense of depression and despair. This Dark Woods gallery
       comes together in collaboration with The Messages and Palace Skateboards.
-    These photos feature Kristopher White as the main subject. <a href="port2.html">Click here</a>
-    to view the entire gallery. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+    These photos feature Kristopher White as the main subject. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
     when an unknown printer took a galley of type and scrambled it to make a type specimen book.
     It has survived not only five centuries, but also the leap into electronic typesetting,
     remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
     sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-    PageMaker including versions of Lorem Ipsum.</p>
+    PageMaker including versions of Lorem Ipsum. Click photo to view gallery.</p>
+
   </div>
 </div>
   <div class="clearfix"
     <div class="Bridge">
-          <h4>Le Bridge</h4>
+          <h4>The Bridge</h4>
           <img src="port_images/bridge.jpg" width="300" height="225" alt="bridge in KY" class="pope">
           <p class="para_2">This gallery is a small collection of dark photos taken upon the pope lick bridge
           and surrounding areas. Like the Dark Woods gallery, this collection shows the use
@@ -88,7 +96,12 @@
 </section>
  </body>
  <footer>
-
+   <ul>
+     <li><a href="">Facebook</a></li>
+     <li><a href="">Instagram</a></li>
+     <li><a href="">Twitter</a></li>
+     <li><a href="https://github.com/LordHopkins">Github</a></li>
+   </ul>
 
  </footer>
 </html>
