--- a/port2.html
+++ b/port2.html
@@ -2,13 +2,37 @@
 <html>
 <head>
     <title>The Dark Woods Collection</title>
+    <link rel="stylesheet" href="port.css">
 </head>
-<body>
-<img src="port_images/prayer.jpg" width="300" alt="Kris praying">
-<img src="port_images/farface.jpg" width="300" alt="Kris looking">
-<img src="port_images/Tree.jpg" width="300" alt="A tree and spiderweb">
-<img src="port_images/closeface.jpg" width="300" alt="A closeup of Kris">
+<section class="main-body">
 
-<a href="port.html">Home page</a>
+      <header class="main-header">
+        <h1> The Dark Collection</h1>
+        <div class="table">
+         <ul>
+           <li><a href="">Meet</a></li>
+           <li><a href="port.html">Home</a></li>
+           <li><a href="">Info</a></li>
+           <li><a href="">Contact</a></li>
+         </div>
+         </ul>
+      </header>
+<body>
+  <h3>The Dark Woods</h3>
+<img src="port_images/prayer.jpg" width="200" alt="Kris praying">
+<img src="port_images/farface.jpg" width="200" alt="Kris looking">
+<img src="port_images/Tree.jpg" width="200" alt="A tree and spiderweb">
+<img src="port_images/closeface.jpg" width="200" alt="A closeup of Kris">
+<br>
 </body>
+</section>
+<footer>
+  <ul>
+    <li><a href="">Facebook</a></li>
+    <li><a href="">Instagram</a></li>
+    <li><a href="">Twitter</a></li>
+    <li><a href="">Github</a></li>
+  </ul>
+
+</footer>
 </html>
