Bootstrap has been added to the HTML file/ font family change

--- a/port.html
+++ b/port.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Trey Hopkins' Dark Collection</title>
     <link rel="stylesheet" href="port.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
 
 </head>
-
+<body class="container">
   <section class="main-body">
 
         <header class="main-header">
@@ -24,7 +26,7 @@
         </header>
 
 
-  <body>
+
 
         <p class="opener">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
@@ -37,30 +39,40 @@
 
       <h3>The Black and White</h3>
 
-        <p>This is a collection that was curated by Trey Andrew</p>
-<div class="clearfix">
-<div class="Woods">
-        <h4>The Dark Woods</h4>
-        <a href="port2.html">
-        <img src="port_images/crossarm.jpg" width="300" alt="Kris with arms crossed" class="crossarm">
-      </a>
-      <p class="para_1">This brilliant collection boasts dramatic black and white shades
-        whilst giving a sense of depression and despair. This Dark Woods gallery
-      comes together in collaboration with The Messages and Palace Skateboards.
-    These photos feature Kristopher White as the main subject. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-    It has survived not only five centuries, but also the leap into electronic typesetting,
-    remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
-    sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-    PageMaker including versions of Lorem Ipsum. Click photo to view gallery.</p>
 
-  </div>
+        <p>This is a collection that was curated by Trey Andrew</p>
+<div class="container-fluid">
+    <div class="clearfix">
+    <div class="Woods">
+            <h4>The Dark Woods</h4>
+          <div class="col-sm-5">
+            <a href="port2.html">
+            <img src="port_images/crossarm.jpg" width="300" alt="Kris with arms crossed" class="crossarm">
+          </a>
+        </div>
+        <div class="col-sm-7">
+          <p class="para_1">This brilliant collection boasts dramatic black and white shades
+            whilst giving a sense of depression and despair. This Dark Woods gallery
+          comes together in collaboration with The Messages and Palace Skateboards.
+        These photos feature Kristopher White as the main subject. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        It has survived not only five centuries, but also the leap into electronic typesetting,
+        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
+        sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
+        PageMaker including versions of Lorem Ipsum. Click photo to view gallery.</p>
+      </div>
+      </div>
+    </div>
 </div>
-  <div class="clearfix"
+<div class="container-fluid">
+  <div class="clearfix">
     <div class="Bridge">
           <h4>The Bridge</h4>
+          <div class="col-sm-5">
           <img src="port_images/bridge.jpg" width="300" height="225" alt="bridge in KY" class="pope">
+        </div>
+        <div class="col-sm-7">
           <p class="para_2">This gallery is a small collection of dark photos taken upon the pope lick bridge
           and surrounding areas. Like the Dark Woods gallery, this collection shows the use
         of gloomy dark shades and dull whites to bring a sense of dramaticism.
@@ -71,13 +83,18 @@
         remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
         sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
         PageMaker including versions of Lorem Ipsum.</p>
+      </div>
     </div>
   </div>
-
+</div>
+<div class="container-fluid">
     <div class="clearfix">
       <div class="abandonded">
             <h4>The abandonded</h4>
+          <div class="col-sm-5">
             <img src="port_images/sitting.jpg" width="300" height="400" alt="Todd on stairs" class="Todd">
+          </div>
+          <div class="col-sm-7">
             <p class="para_3">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi
@@ -91,10 +108,11 @@
               remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
               sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
               PageMaker including versions of Lorem Ipsum.</p>
-            </div>
-      </div>
-</section>
- </body>
+           </div>
+        </div>
+    </div>
+</div>
+
  <footer>
    <ul>
      <li><a href="">Facebook</a></li>
@@ -104,4 +122,7 @@
    </ul>
 
  </footer>
+ </section>
+</body>
+
 </html>
