main body changes to the width for resposiveness

--- a/port.html
+++ b/port.html
@@ -18,7 +18,7 @@
            <ul>
              <li><a href="">Meet</a></li>
              <li><a href="about.html">About</a></li>
-             <li><a href="">Info</a></li>
+             <li><a href="">Login</a></li>
              <li><a href="">Contact</a></li>
            </ul>
            </div>
@@ -37,20 +37,24 @@
 
 
 
-      <h3>The Black and White</h3>
+      <h3>Day One</h3>
 
 
-        <p>This is a collection that was curated by Trey Andrew</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        It has survived not only five centuries, but also the leap into electronic typesetting</p>
+
 <div class="container-fluid">
     <div class="clearfix">
     <div class="Woods">
             <h4>The Dark Woods</h4>
-          <div class="col-sm-5">
+          <div class="col-md-5">
             <a href="port2.html">
             <img src="port_images/crossarm.jpg" width="300" alt="Kris with arms crossed" class="crossarm">
           </a>
         </div>
-        <div class="col-sm-7">
+        <div class="col-md-7">
           <p class="para_1">This brilliant collection boasts dramatic black and white shades
             whilst giving a sense of depression and despair. This Dark Woods gallery
           comes together in collaboration with The Messages and Palace Skateboards.
@@ -69,10 +73,10 @@
   <div class="clearfix">
     <div class="Bridge">
           <h4>The Bridge</h4>
-          <div class="col-sm-5">
+          <div class="col-md-5">
           <img src="port_images/bridge.jpg" width="300" height="225" alt="bridge in KY" class="pope">
         </div>
-        <div class="col-sm-7">
+        <div class="col-md-7">
           <p class="para_2">This gallery is a small collection of dark photos taken upon the pope lick bridge
           and surrounding areas. Like the Dark Woods gallery, this collection shows the use
         of gloomy dark shades and dull whites to bring a sense of dramaticism.
@@ -91,10 +95,10 @@
     <div class="clearfix">
       <div class="abandonded">
             <h4>The abandonded</h4>
-          <div class="col-sm-5">
+          <div class="col-md-5">
             <img src="port_images/sitting.jpg" width="300" height="400" alt="Todd on stairs" class="Todd">
           </div>
-          <div class="col-sm-7">
+          <div class="col-md-7">
             <p class="para_3">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi
