--- a/about.html
+++ b/about.html
@@ -4,7 +4,9 @@
     <title>Trey Hopkins' Dark Collection</title>
     <link rel="stylesheet" href="port.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -14,16 +16,20 @@
           <h1> The Dark Collection</h1>
           <div class="table">
            <ul>
+
              <li><a href="">Meet</a></li>
              <li><a href="port.html">Home</a></li>
-             <li><a href="">Info</a></li>
+             <li><a href="">Login</a></li>
              <li><a href="">Contact</a></li>
-           </div>
+
            </ul>
+         </div>
         </header>
   <body>
+<div class="container-fluid">
     <h2>About</h2>
     <img src="port_images/bricks.jpg" width=300px alt="picture of bricks from building">
+    <div class="col-sm">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
       sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
       quis nostrud exercitation ullamco laboris nisi
@@ -49,6 +55,8 @@
         remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
         sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
         PageMaker including versions of Lorem Ipsum.</p>
+    </div>
+</div>
   </body>
 
   <footer>
