--- a/port.html
+++ b/port.html
@@ -18,7 +18,7 @@
            <ul>
              <li><a href="">Meet</a></li>
              <li><a href="about.html">About</a></li>
-             <li><a href="login.html">Login</a></li>
+             <li><button id="modalBtn">login</button></li>
              <li><a href="">Contact</a></li>
            </ul>
            </div>
@@ -126,6 +126,45 @@
 
  </footer>
  </section>
+
+
+ <div id="SimpleModal" class="modal-login">
+
+   <div class="modal-content">
+     <span class="Closebtn">&times</span>
+     <h1> The Dark Collection</h1>
+
+     <div class="table">
+      <ul>
+        <li><a href="port.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+      </div>
+       <h2>Login/Signup</h2>
+
+       <form class="updates" action="index.html" method="post">
+
+
+             <fieldset class="login-info">
+               <legend><span class="number"></span></legend>
+                 <form action="login.html" method="post">
+                 <label for="name">Username:</label>
+                   <input type="text" id="name" name="user_name">
+                 <label for="email">Email:</label>
+                   <input type="email" id="email" name="user_email">
+                 <label for="password">Password:</label>
+                   <input type="password" id="password" name="user_password">
+                   <button>Submit</submit>
+
+
+             </fieldset>
+           </form>
+         </div>
+       </div>
+
+ <script src="script.js"></script>
 </body>
 
 </html>
