--- a/port2.html
+++ b/port2.html
@@ -12,7 +12,7 @@
          <ul>
            <li><a href="">Meet</a></li>
            <li><a href="port.html">Home</a></li>
-           <li><a href="">Info</a></li>
+           <li><a href="#" id="modalBtn">Login</a></li>
            <li><a href="">Contact</a></li>
          </div>
          </ul>
@@ -24,6 +24,49 @@
 <img src="port_images/Tree.jpg" width="200" alt="A tree and spiderweb">
 <img src="port_images/closeface.jpg" width="200" alt="A closeup of Kris">
 <br>
+
+
+
+
+<div id="SimpleModal" class="modal-login">
+
+  <div class="modal-content">
+    <span class="Closebtn">&times</span>
+    <h1> The Dark Collection</h1>
+
+    <div class="table">
+     <ul>
+       <li><a href="port.html">Home</a></li>
+       <li><a href="about.html">About</a></li>
+       <li><a href="login.html">Login</a></li>
+       <li><a href="">Contact</a></li>
+     </ul>
+     </div>
+      <h2>Login</h2>
+
+      <form class="updates" action="port.html" method="post">
+
+
+            <fieldset class="login-info">
+              <legend><span class="number"></span></legend>
+                <form action="login.html" method="post">
+                <label for="name">Username:</label>
+                  <input type="text" placeholder="Enter username" id="name" name="user_name">
+                <label for="email">Email:</label>
+                  <input type="email" placeholder="Enter email" id="email" name="user_email">
+                <label for="password">Password:</label>
+                  <input type="password" placeholder="Enter password" id="password" name="user_password">
+                  <button id="submit-login">Submit</submit>
+
+            </fieldset>
+
+          </form>
+        </div>
+      </div>
+
+      
+
+<script src="script.js"></script>
 </body>
 </section>
 <footer>
