--- a/port.html
+++ b/port.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 </head>
 <body class="container">
   <section class="main-body">
@@ -18,8 +18,8 @@
            <ul>
              <li><a href="">Meet</a></li>
              <li><a href="about.html">About</a></li>
-             <li><button id="modalBtn">login</button></li>
-             <li><a href="">Contact</a></li>
+             <li><a href="#" id="modalBtn">Login</a></li>
+             <li><a href="#">Contact</a></li>
            </ul>
            </div>
 
@@ -117,6 +117,7 @@
 </div>
 
  <footer>
+
    <ul>
      <li><a href="">Facebook</a></li>
      <li><a href="">Instagram</a></li>
@@ -138,31 +139,30 @@
       <ul>
         <li><a href="port.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="login.html">Login</a></li>
         <li><a href="">Contact</a></li>
       </ul>
       </div>
-       <h2>Login/Signup</h2>
+       <h2>Login</h2>
 
-       <form class="updates" action="index.html" method="post">
+       <form class="login" action="login.html" method="post">
 
 
-             <fieldset class="login-info">
+            <fieldset class="login-info">
                <legend><span class="number"></span></legend>
-                 <form action="login.html" method="post">
                  <label for="name">Username:</label>
-                   <input type="text" id="name" name="user_name">
+                   <input type="text" placeholder="Enter username" id="name" name="user_name">
                  <label for="email">Email:</label>
-                   <input type="email" id="email" name="user_email">
+                   <input type="email" placeholder="Enter email" id="email" name="user_email">
                  <label for="password">Password:</label>
-                   <input type="password" id="password" name="user_password">
-                   <button>Submit</submit>
-
+                   <input type="password" placeholder="Enter password" id="password" name="user_password">
+                   <button id="submit-login">Submit</submit>
 
              </fieldset>
+
            </form>
          </div>
        </div>
+
 
  <script src="script.js"></script>
 </body>
