The source of jquery has been changed

--- a/port.html
+++ b/port.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-    
+      <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body class="container">
   <section class="main-body">
@@ -155,7 +155,7 @@
                    <input type="email" placeholder="Enter email" id="email" name="user_email">
                  <label for="password">Password:</label>
                    <input type="password" placeholder="Enter password" id="password" name="user_password">
-                   <button id="submit-login">Submit</submit>
+                   <button id="submit-login">Submit</button>
 
              </fieldset>
 
@@ -165,7 +165,6 @@
 
 
  <script src="script.js"></script>
-   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 </body>
 
 </html>
