adds https to query

--- a/port.html
+++ b/port.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-      <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body class="container">
   <section class="main-body">
@@ -144,7 +144,7 @@
       </div>
        <h2>Login</h2>
 
-       <form class="login" action="login.html" method="post">
+       <form class="login" action="port.html" method="post">
 
 
             <fieldset class="login-info">
