--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <section class="main-body">
 
         <header class="main-header">
-          <h1> The Dark Collection</h1>
+          <h1> The Place.</h1>
           <div class="table">
            <ul>
 
@@ -28,7 +28,7 @@
   <body>
 <div class="container-fluid">
     <h2>About</h2>
-    <img src="port_images/bricks.jpg" width=300px alt="picture of bricks from building">
+    <img src="port_images/Trey.jpg" width=300px alt="picture of bricks from building">
 
     <div class="col-sm">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -64,7 +64,7 @@
 
   <div class="modal-content">
     <span class="Closebtn">&times</span>
-    <h1> The Dark Collection</h1>
+    <h1> The Place.</h1>
 
     <div class="table">
      <ul>
@@ -96,7 +96,7 @@
         </div>
       </div>
 
-      
+
  <script src="script.js"></script>
   </body>
 
