--- a/port.html
+++ b/port.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-      <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="jquery.js"></script>
 </head>
 <body class="container">
   <section class="main-body">
 
         <header class="main-header">
-          <h1> The Dark Collection</h1>
+          <h1>The Place.</h1>
           <div class="table">
            <ul>
              <li><a href="">Meet</a></li>
@@ -25,32 +25,35 @@
 
         </header>
 
+        <img src="port_images/Place.jpg" alt="Todd with a brick in his hand" width="800" height="500" bm=5px>
 
 
-        <p class="opener">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-        It has survived not only five centuries, but also the leap into electronic typesetting,
+
+        <p class="opener">The place is a progressive outlet for artist to showcase their in all forms.
+
         </p>
 
 
 
 
-      <h3>Day One</h3>
+      <h3>One day at a time.</h3>
 
 
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-        It has survived not only five centuries, but also the leap into electronic typesetting</p>
+        <p>We strive to connect artists from allover the world in one place. We believe art
+        should be appreciated in every way, no matter how controversial or unpopular. Art is
+        a way for the spectator to take a look inside the mind of the artist and try to grasp
+        the thought process of that paticular piece. We, as a community find it important to
+        lift all artwork and let it be interpreted by the public in whatever way, one
+        day at a time.
+         </p>
 
 <div class="container-fluid">
     <div class="clearfix">
     <div class="Woods">
-            <h4>The Dark Woods</h4>
+            <h4>November, Two Thousand Seventeen.</h4>
           <div class="col-md-5">
             <a href="port2.html">
-            <img src="port_images/crossarm.jpg" width="300" alt="Kris with arms crossed" class="crossarm">
+            <img src="port_images/nirvana.jpg" width="300" alt="Trey Hopkins" class="crossarm">
           </a>
         </div>
         <div class="col-md-7">
@@ -71,11 +74,11 @@
 <div class="container-fluid">
   <div class="clearfix">
     <div class="Bridge">
-          <h4>The Bridge</h4>
-          <div class="col-md-5">
-          <img src="port_images/bridge.jpg" width="300" height="225" alt="bridge in KY" class="pope">
+          <h4>October, Two Thousand Seventeen.</h4>
+          <div class="col-md-7">
+          <img src="port_images/Trey2.jpg" width="450" alt="bridge in KY" class="pope">
         </div>
-        <div class="col-md-7">
+        <div class="col-md-5">
           <p class="para_2">This gallery is a small collection of dark photos taken upon the pope lick bridge
           and surrounding areas. Like the Dark Woods gallery, this collection shows the use
         of gloomy dark shades and dull whites to bring a sense of dramaticism.
@@ -93,9 +96,35 @@
 <div class="container-fluid">
     <div class="clearfix">
       <div class="abandonded">
-            <h4>The abandonded</h4>
+            <h4>April, Two Thousand Seventeen.</h4>
           <div class="col-md-5">
             <img src="port_images/sitting.jpg" width="300" height="400" alt="Todd on stairs" class="Todd">
+          </div>
+          <div class="col-md-7">
+            <p class="para_3">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi
+              ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+              when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+              It has survived not only five centuries, but also the leap into electronic typesetting,
+              remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
+              sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
+              PageMaker including versions of Lorem Ipsum.</p>
+           </div>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid">
+    <div class="clearfix">
+      <div class="Speed">
+            <h4>December, Two Thousand Sixteen.</h4>
+          <div class="col-md-5">
+            <img src="port_images/Speed.jpg" width="300"  alt="Kris on stairs of speed art" class="Speed">
           </div>
           <div class="col-md-7">
             <p class="para_3">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -133,7 +162,7 @@
 
    <div class="modal-content">
      <span class="Closebtn">&times</span>
-     <h1> The Dark Collection</h1>
+     <h1> The Place.</h1>
 
      <div class="table">
       <ul>
