--- a/port2.html
+++ b/port2.html
@@ -7,7 +7,7 @@
 <section class="main-body">
 
       <header class="main-header">
-        <h1> The Dark Collection</h1>
+        <h1> The Place.</h1>
         <div class="table">
          <ul>
            <li><a href="">Meet</a></li>
@@ -64,7 +64,7 @@
         </div>
       </div>
 
-      
+
 
 <script src="script.js"></script>
 </body>
