--- a/port.html
+++ b/port.html
@@ -8,36 +8,94 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
 <body class="container">
   <section class="main-body">
 
 
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-4" class="text-center">
+      <p>some shit</p>
+    </div>
 
-        <header class="main-header">
+     <div class="col-md-4">
+      <header class="main-header">
           <h1>The Place.</h1>
           <div class="table">
            <ul>
              <li><a href="">Meet</a></li>
              <li><a href="about.html">About</a></li>
              <li><a href="#" id="modalBtn">Login</a></li>
-             <li><a href="#" >Contact</a></li>
+             <li><a href="#Contact-section">Contact</a></li>
            </ul>
            </div>
 
         </header>
+      </div>
+
+      <div class="col-md-4">
+        <p>right side</p>
+      </div>
+ </div>
+</div>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
 
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+          </ol>
 
 
-        <img src="port_images/Place.jpg" class="img-responsive" alt="Todd with a brick in his hand" width=100% height="500">
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="port_images/Place.jpg" alt="brick phone" width="100%" height="500px">
+              <div class="carousel-caption">
+                <p>How many cars can I drive until I run out of road?</p>
+              </div>
+            </div>
+
+            <div class="item">
+              <img src="port_images/louisville.JPG" alt="Ghetto Louisville skyline" width="100%" height="500px">
+              <div class="carousel-caption">
+
+                <p>Louisville</p>
+              </div>
+            </div>
+
+            <div class="item">
+              <img src="port_images/crossarm.jpg" alt="A man with arms crossed" width="100%" height="500px">
+              <div class="carousel-caption">
+
+                <p>Whos gonna know?</p>
+              </div>
+            </div>
+          </div>
+
+
+          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+
 
 
 
         <p class="opener">The place is a progressive outlet for artist to showcase their in all forms.
 
         </p>
+
+
 
 
 
@@ -62,6 +120,7 @@
           </a>
         </div>
         <div class="col-md-7">
+
           <p class="para_1">This brilliant collection boasts dramatic black and white shades
             whilst giving a sense of depression and despair. This Dark Woods gallery
           comes together in collaboration with The Messages and Palace Skateboards.
@@ -106,6 +165,7 @@
             <img src="port_images/sitting.jpg" width="300" height="400" alt="Todd on stairs" class="Todd">
           </div>
           <div class="col-md-7">
+
             <p class="para_3">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi
@@ -187,6 +247,61 @@
            </form>
          </div>
        </div>
+
+
+<div class="container" class="contact" id="Contact-section">
+  <h3 class="text-center">Contact Us</h3>
+  <p class="text-center">Want us to feature your art?</p>
+
+  <div class="col-md-4">
+    <div class="row">
+      <p><span class="glyphicon glyphicon-map-marker"></span> Louisville, KY</p>
+      <p><span class="glyphicon glyphicon-phone"></span>Phone: 502-939-XXXX</p>
+      <p><span class="glyphicon glyphicon-envelope"></span>Email: andrewhopkins0313@gmail.com</p>
+
+    </div>
+  </div>
+
+    <div class="col-md-8">
+          <div class="row">
+            <div class="col-sm-6 form-group">
+              <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+            </div>
+            <div class="col-sm-6 form-group">
+              <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+            </div>
+          </div>
+          <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
+          <br>
+          <div class="row">
+            <div class="col-md-12 form-group">
+              <button class="btn pull-right" type="submit">Send</button>
+            </div>
+        </div>
+      </div>
+
+
+
+
+  </div>
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <div class="container-fluid">
   <div class="row">
