--- a/port.html
+++ b/port.html
@@ -15,10 +15,10 @@
   <section class="main-body">
 
 
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-4" class="text-center">
-      <p>some shit</p>
+<div class="container-fluid" >
+  <div class="row" class="nav-header">
+    <div class="col-md-4" class="text-center" class="menu">
+
     </div>
 
      <div class="col-md-4">
@@ -36,9 +36,21 @@
         </header>
       </div>
 
-      <div class="col-md-4">
-        <p>right side</p>
-      </div>
+  <div class="col-md-4" class="icons">
+
+            <div class="dropdown">
+      <a href="" class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+      <span class="glyphicon glyphicon-globe"> </span></a>
+      <ul class="dropdown-menu">
+        <li><a href="#">François</a></li>
+        <li><a href="#">Español</a></li>
+        <li><a href="#">Deutch</a></li>
+      </ul>
+    <span class="glyphicon glyphicon-header"></span>
+
+     </div>
+
+  </div>
  </div>
 </div>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -55,7 +67,7 @@
             <div class="item active">
               <img src="port_images/Place.jpg" alt="brick phone" width="100%" height="500px">
               <div class="carousel-caption">
-                <p>How many cars can I drive until I run out of road?</p>
+
               </div>
             </div>
 
@@ -63,7 +75,7 @@
               <img src="port_images/louisville.JPG" alt="Ghetto Louisville skyline" width="100%" height="500px">
               <div class="carousel-caption">
 
-                <p>Louisville</p>
+
               </div>
             </div>
 
@@ -71,7 +83,7 @@
               <img src="port_images/crossarm.jpg" alt="A man with arms crossed" width="100%" height="500px">
               <div class="carousel-caption">
 
-                <p>Whos gonna know?</p>
+
               </div>
             </div>
           </div>
@@ -91,9 +103,9 @@
 
 
 
-        <p class="opener">The place is a progressive outlet for artist to showcase their in all forms.
+        <p class="opener">The place is a progressive outlet for artist to showcase their in all forms. All current photo collections
+        have been curated by Trey Hopkins.</p>
 
-        </p>
 
 
 
@@ -240,7 +252,7 @@
                    <input type="email" placeholder="Enter email" id="email" name="user_email">
                  <label for="password">Password:</label>
                    <input type="password" placeholder="Enter password" id="password" name="user_password">
-                   <button id="submit-login">Submit</button>
+                   <button id="submit-login">login/signup</button>
 
              </fieldset>
 
@@ -332,7 +344,7 @@
   <ul>
     <li><a href="">Facebook</a></li>
     <li><a href="">Instagram</a></li>
-    <li><a href="">Twitter</a></li>
+    <li><a href="https://vsco.co/shabbyranks/images/1">Vsco</a></li>
     <li><a href="https://github.com/LordHopkins">Github</a></li>
   </ul>
 
