--- a/port.html
+++ b/port.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Trey Hopkins' Dark Collection</title>
+    <title>Trey Hopkins' Collection</title>
     <link rel="stylesheet" href="port.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="jquery.js"></script>
