Changes made to README, adds comments to files

--- a/port.html
+++ b/port.html
@@ -11,6 +11,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
+
+
 <body class="container">
   <section class="main-body">
 
@@ -36,6 +38,8 @@
         </header>
       </div>
 
+<!-- Dropdown For Language Change !-->
+
   <div class="col-md-4" class="icons">
 
             <div class="dropdown">
@@ -54,6 +58,10 @@
   </div>
  </div>
 </div>
+
+<!-- Carousel !-->
+
+
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
 
@@ -101,7 +109,7 @@
         </div>
 
 
-
+<!-- End of Carousel !-->
 
 
         <p class="opener">The place is a progressive outlet for artist to showcase their in all forms. All current photo collections
@@ -110,7 +118,7 @@
 
 
 
-
+<!-- Beginning of main content !-->
 
       <h3>One day at a time.</h3>
 
@@ -148,6 +156,9 @@
       </div>
     </div>
 </div>
+
+
+
 <div class="container-fluid">
   <div class="clearfix">
     <div class="Bridge">
@@ -170,6 +181,12 @@
     </div>
   </div>
 </div>
+
+
+
+
+
+
 <div class="container-fluid">
     <div class="clearfix">
       <div class="abandonded">
@@ -196,6 +213,10 @@
         </div>
     </div>
 </div>
+
+
+
+
 
 <div class="container-fluid">
     <div class="clearfix" class="mb-2">
@@ -226,6 +247,9 @@
 
  </section>
 
+ <!-- End of Main Content !-->
+
+<!-- Modal Form !-->
 
  <div id="SimpleModal" class="modal-login">
 
@@ -261,6 +285,9 @@
          </div>
        </div>
 
+<!-- End of Modal !-->
+
+<!-- Contact Form !-->
 
 <div class="container" class="contact" id="Contact-section">
   <h3 class="text-center">Contact Us</h3>
@@ -296,7 +323,7 @@
         </div>
       </div>
 
-
+<!-- End of Contact Form !-->
 
 
   </div>
