Spacing added to the columns in the html

--- a/port.html
+++ b/port.html
@@ -131,6 +131,8 @@
         day at a time.
          </p>
 
+
+
 <div class="container-fluid">
     <div class="clearfix">
     <div class="Woods">
@@ -155,7 +157,7 @@
       </div>
       </div>
     </div>
-</div>
+</div> <br>
 
 
 
@@ -180,7 +182,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> <br>
 
 
 
@@ -212,7 +214,7 @@
            </div>
         </div>
     </div>
-</div>
+</div> <br>
 
 
 
