adding link to the about html

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Trey Hopkins' Dark Collection</title>
+    <title>Trey Hopkins' Collection</title>
     <link rel="stylesheet" href="port.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -20,14 +20,14 @@
              <li><a href="">Meet</a></li>
              <li><a href="port.html">Home</a></li>
              <li><a href="#" id="modalBtn">Login</a></li>
-             <li><a href="">Contact</a></li>
+             <li><a href="port.html">Contact</a></li>
 
            </ul>
          </div>
         </header>
   <body>
 <div class="container-fluid">
-    <h2>About</h2>
+    <h2>About The Place.</h2>
     <img src="port_images/Trey.jpg" width=300px alt="picture of bricks from building">
 
     <div class="col-sm">
