Adds languages to the script function that changes title language

--- a/port.html
+++ b/port.html
@@ -47,8 +47,8 @@
       <span class="glyphicon glyphicon-globe"> </span></a>
       <ul class="dropdown-menu">
         <li><a href="#" id="language-chng" onclick="chngText()">François</a></li>
-        <li><a href="#">Español</a></li>
-        <li><a href="#">Deutch</a></li>
+        <li><a href="#" onclick="chngText_2()">Español</a></li>
+        <li><a href="#" onclick="chngText_3()">Deutch</a></li>
         <li><a href="#" onclick="chngText_1()">English</a></li>
       </ul>
     <span class="glyphicon glyphicon-header"></span>
